k8/ingress_maria/phpapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: ingress-nginx
  labels:
    app: app-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-app
  template:
    metadata:
      labels:
        app: app-app
    spec:
      containers:
        - name: app-container
          image: maheshdevops1/ft7:php_app
          imagePullPolicy: Always
