k8/ingress_maria/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: ingress-nginx
spec:
  replicas: 1
  serviceName: mysql
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mariadb
          image: gowdasagar/mariadb:mdb
          imagePullPolicy: Always
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 3306
