k8/ingress_maria/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: app-app
  ports:
    - name: tcp
      port: 80
      targetPort: 8080
      nodePort: 30013
