k8/ingress_maria/sqlservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ingress-nginx
  labels:
    app: mariadb
spec:
  type: ClusterIP
  selector:
    app: mariadb
  ports:
    - name: tcp
      protocol: TCP
      port: 3306
