k8/ingress_maria/ingress_service1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
 name: example-ingress11
 namespace: ingress-nginx
spec:
 defaultBackend:
  service:
   name: app-service
   port:
    number: 80
